tests/parsing/smtlib/v2.7/errors/132_datatype_dec_unopened_cstr_list_1.smt2
(set-logic ALL)
(declare-datatype foo (par (a) _))
